# just-pre-commit

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  justfile  noxfile.py  pyproject.toml  ruff.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: bump.yml  ci.yml  main.yml  update-copier.yml
requirements/lock/: uvx-tools.txt
scripts/: mirror.py
src/just_pre_commit/: apply_command.py
tests/: __init__.py  test_apply_command.py
tools/: shared.just
