[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.11.0,<0.12.0",
]

[project]
name = "just-pre-commit"
version = "0.0.0"
description = "Just pre-commit hooks"
readme = "README.md"
keywords = [
    "just",
    "pre-commit",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rust-just==1.46.0",
]

[project.scripts]
apply-command = "just_pre_commit.apply_command:main"

[project.urls]
Documentation = "https://pages.nist.gov/just-pre-commit/"
Homepage = "https://github.com/wpk-nist-gov/just-pre-commit"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "nox" },
    { include-group = "test" },
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    { include-group = "pytest" },
]
type = [
    "packaging",
    "urllib3",
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
# other groups
basedpyright = [ "basedpyright>=1.31.3" ]
mypy = [ "mypy[faster-cache]>=1.15.0" ]
nox = [ "nox>=2025.5.1" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
typecheck-runner = [ "typecheck-runner>=0.1.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.14"

# * Checks ---------------------------------------------------------------------
[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
    "PY004",  # no docs
]

[tool.check-wheel-contents]
src_dir = [ "src" ]
toplevel = [ "just_pre_commit" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
]
indent = 4
keep_full_version = true

[tool.typos.default.extend-identifiers]
CPY = "CPY"

# * typecheck ---------------------------------------------------------------------
[tool.mypy]
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
files = [
    "scripts",
    "src",
    "tests",
]
strict = true
# options
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [ "scripts", "src", "tests" ]

[tool.pyright]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
include = [
    "scripts",
    "src",
    "tests",
]
typeCheckingMode = "strict"
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false

[[tool.pyright.executionEnvironments]]
reportUnusedCallResult = false
root = "tests"

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [ "scripts", "src", "tests" ]

# * Testing --------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "just_pre_commit",
    "tests",
]
# options
filterwarnings = [ "error" ]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
run.source = [
    "just_pre_commit",
]
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
    "*/.nox/**/site-packages",
    "*/src",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * Dependency creation --------------------------------------------------------
[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=2.5.5",
    "copier",
    "copier-template-extensions>=0.3.1",
    "grayskull>=2.5.3",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "rooster>=0.1.1",
    "twine>=5.0.0",
    "ty>=0.0.14",
]
groups = [
    "basedpyright",
    "mypy",
    "nox",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------
[tool.commitizen]
use_shortcuts = true

[tool.rooster]
changelog_contributors = true
major-labels = [ "breaking" ]
minor_labels = [ "enhancement" ]
patch-labels = [ "bug", "documentation" ]
# options
ignore-labels = [ "internal" ]
require-labels = [ "breaking", "bug", "documentation", "enhancement" ]
version_files = [
    "pyproject.toml",
]
# sections
section-labels."Breaking changes" = [ "breaking" ]
section-labels."Bug fixes" = [ "bug" ]
section-labels.Documentation = [ "documentation" ]
section-labels.Enhancements = [ "enhancement" ]
section-labels.Internal = [ "internal" ]
section-labels."Other changes" = [ "__unknown__" ]
